# trading-backtest

./: .gitignore  config.json  requirements.txt
backend/: main.py  orchestrator.py  parser.py
core/: CMakeLists.txt
core/engine/include/: Backtester.h  Portfolio.h  Types.h
core/engine/src/: Backtester.cpp  Bindings.cpp  Portfolio.cpp
core/include/: Types.h
core/strategies/: SMA_strategy.cpp  SMA_strategy.h  Strategy.h
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.ts
